2010-03-06       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GenGCC.mod:  FindSize extended to find
	  the size of a undeclared variables so long as its type is known.
	* gm2/gm2-compiler/M2Quads.mod:  use MetaError2 instead of
	  FailParameter when incorrect number of parameters are given.
	* gm2/gm2-compiler/M2ALU.def:  PushTypeOfTree (New procedure).
	* gm2/gm2/gm2-compiler/M2ALU.mod:  PushTypeOfTree,
	  PushGCCArrayType, PushGCCSetTree, PushGCCRecordTree new
	  procedures implemented which take a GCC tree and push it to
	  the ALU stack and assign the front end type ALU tag.
	* gm2/gm2-compiler/SymbolConversion.mod:  use PushTypeOfTree.
	* gm2/gm2-compiler/SymbolTable.mod:  modified debugging hooks.
	* gm2/gm2/gm2-compiler/M2ALU.mod:  PushTypeOfTree test whether
	  symbols type is NulSym and if so call PushIntegerTree.

2010-03-04       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  now build and install O2, SO, SO_O2
	  versions of the coroutines libraries.
	* gm2/TODO:  removed INT and added allocation of dynamic arrays
	  using alloca.
	* gm2/examples/swig/strlib/Makefile:  use PYTHON_VERSION.
	* gm2/gm2-libs-pim/Strings.def:  corrected parameter names
	  source and dest in Assign.
	* gm2/gm2-libs-pim/Strings.mod:  corrected parameter names
	  source and dest in Assign.

2010-02-26       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2Base.mod:  IsArrayUnboundedCompatible
	  (New procedure).  Use IsArrayUnboundedCompatible to
	  check type equivalence during parameter passing.
	* gm2/gm2-compiler/M2Quads.mod:  IsSameUnbounded
	  (New procedure).  Use IsSameUnbounded to check
	  type equivalence during parameter passing.
	  These two procedures differ in their assumptions.
	* gm2/gm2-libs-iso/RTgen.mod:  allow doReadText to
	  be implemented with multiple calls to doRBytes.

2010-02-25       Gaius Mulley <gaius@gnu.org>

	* calling-c/datatypes/unbounded/run/pass/gm2.exp:
	* complex/run/pass/gm2.exp:
	* examples/callingC/run/pass/gm2.exp: